--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit
+streamlit==1.35.0
 numpy
-pandas
-pykrx
-streamlit_extras
-st-pages
-plotly
-yfinance
-matplotlib
+pandas==2.2.2
+pykrx==1.0.45
+streamlit-extras==0.4.2
+st-pages==0.4.5
+plotly==5.22.0
+yfinance==0.2.40
+matplotlib==3.9.0
 finance-datareader
 fuzzywuzzy
