--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-streamlit==1.36
-pandas
+streamlit==1.31.1
 numpy
+pandas==2.2.2
+pykrx==1.0.45
+streamlit-extras==0.4.2
+st-pages==0.4.5
+plotly==5.22.0
+yfinance==0.2.40
+matplotlib==3.9.0
+finance-datareader
 fuzzywuzzy
-pykrx
-streamlit_extras
-st_pages==0.5
-plotly
-yfinance
