--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas==2.2.2
 pykrx==1.0.45
 streamlit-extras==0.4.2
 st-pages==0.4.5
-plotly==5.22.0
+plotly
 yfinance==0.2.40
 matplotlib==3.9.0
 finance-datareader
